# solanum

./: .gitignore  Cargo.toml
config/: log4rs.yaml.sample
src/: lib.rs
src/client/: mod.rs
src/daemon/: can_handle.rs  clock.rs  command.rs  command_event_subscriber.rs  command_processor.rs  command_processor.rs.bk  command_responder.rs  daemon_container.rs  event_listener.rs  event_poller.rs  event_processor.rs  event_subscriber.rs  mod.rs  pomodoro.rs  pomodoro_query_mapper.rs  pomodoro_query_mapper.rs.bk  pomodoro_transitioner.rs  pomodoros.rs  result.rs  signal_event_subscriber.rs  system_clock.rs
src/daemon/io/: can_handle.rs  command_event_subscriber.rs  command_event_subscriber.rs.bk  event_poller.rs  event_poller.rs.bk  event_subscriber.rs  mod.rs  signal_event_subscriber.rs
tests/: acceptance_test.rs  acceptance_test.rs.bk
