[package]
name = "solanum"
version = "0.1.0"
authors = ["Ryan DV <rdevilla@uwaterloo.ca>"]

[dependencies]
mio = "0.6.0"
mio-uds = "0.6.0"
nix = "0.7.0"

[profile.dev]
debug = true

[[bin]]
name = "solanumd"
path = "src/daemon/bin/main.rs"

[lib]
name = "solanum"

[[bin]]
name = "solanum"
path = "src/client/bin/main.rs"
