[package]
name = "solanum"
version = "0.1.0"
authors = ["Ryan DV <rdevilla@uwaterloo.ca>"]

[dependencies]
libc = "0.2.16"
log = "0.3"
log4rs = { version = "0.4.8", features = ["yaml"] }
mio = "0.6.0"
mio-uds = "0.6.0"
nix = "0.7.0"
time = "0.1"

[profile.dev]
debug = true

[[bin]]
name = "solanumd"
path = "src/daemon/bin/main.rs"

[lib]
name = "solanum"

[[bin]]
name = "solanum"
path = "src/client/bin/main.rs"
